--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,14 @@ h1 {
     text-align: center;
 }
 
-#charactersList {
+#contentsList {
     padding-inline-start: 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
     grid-gap: 20px;
 }
 
-.contentBox{
+.contentBox {
     list-style-type: none;
     background-color: #eaeaea;
     border-radius: 5px;
@@ -38,26 +38,46 @@ h1 {
     text-align: left;
 }
 
-.contentBox> .titleLink {
+.contentBox > .titleLink {
     grid-area: name;
+    margin-top: 10px;
     margin-bottom: -18px;
 }
 
-.contentBox> .urlLink {
+.contentBox > .urlLink {
     grid-area: url;
     /* margin-bottom: 0px; */
 }
 
-.contentBox> .description {
+.contentBox > .description {
     grid-area: text;
-    margin: 0;
+    margin-top: 0;
 }
 
-.contentBox> img {
+.contentBox > img {
     max-height: 100px;
     grid-area: image;
 }
 
+.errorBox {
+    list-style-type: none;
+    background-color: #eaeaea;
+    border-radius: 5px;
+    padding: 10px 20px;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas:
+        "name"
+        "url"
+        "text";
+    text-align: left;
+    color: #d8000c;
+    background-color: #ffd2d2;
+}
+
+#loadWrapper {
+    padding: 50px;
+}
 /* #searchBar {
     width: 100%;
     height: 32px;
@@ -84,7 +104,7 @@ h1 {
     display: flex;
 }
 
-.searchTerm {
+#searchTerm {
     width: 100%;
     border: 3px solid #00b4cc;
     border-right: none;
@@ -95,11 +115,11 @@ h1 {
     color: #9dbfaf;
 }
 
-.searchTerm:focus {
+#searchTerm:focus {
     color: #00b4cc;
 }
 
-.searchButton {
+#searchButton {
     width: 40px;
     height: 36px;
     border: 1px solid #00b4cc;
@@ -109,4 +129,37 @@ h1 {
     border-radius: 0 5px 5px 0;
     cursor: pointer;
     font-size: 20px;
+}
+
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+.lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+    0% {
+        top: 36px;
+        left: 36px;
+        width: 0;
+        height: 0;
+        opacity: 1;
+    }
+    100% {
+        top: 0px;
+        left: 0px;
+        width: 72px;
+        height: 72px;
+        opacity: 0;
+    }
 }
